...
    <string name="dialog_note_placeholder">Note Name</string>
    <string name="user_description_placeholder">Description</string>
    <string name="user_lastname_placeholder">Last name</string>
    <string name="user_firstname_placeholder">First name</string>
    <string name="note_description_placeholder">Description</string>
    <string name="note_name_placeholder">Name</string>
    <string name="dialog_notelement_title">Create new element</string>
    <string name="dialog_noteelement_texttype">Text</string>
    <string name="dialog_noteelement_listtype">List</string>
    <string name="dialog_noteelement_imagetype">Image</string>
    <string name="imageelement_title_hint">Title</string>
    <string name="listelement_title_hint">Title</string>
    <string name="textelement_title_hint">Title</string>
    <string name="textelement_description_hint">Description</string>
...
