<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_note_addelement"
        android:title="Add element"
        android:icon="@drawable/ic_add"
        app:showAsAction="ifRoom"
        />
    <item
        android:id="@+id/action_note_confirm"
        android:title="Confirm"
        android:icon="@drawable/ic_check"
        app:showAsAction="ifRoom"/>

</menu>