<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <data>
        <variable
            name="viewModel"
            type="com.haxos.foodity.data.model.TextNoteElementViewModel"
        />
    </data>
    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
    >

        <TextView
                android:id="@+id/element_text_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent"
                android:text="@{viewModel.textElement.title}"
        />

        <TextView
                android:id="@+id/element_text_contents"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/element_text_title"
                android:text="@{viewModel.textElement.contents}"
        />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>