<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
>

    <data>
        <variable
                name="viewModel"
                type="com.haxos.foodity.ui.main.notes.content.NoteViewModel"
        />
    </data>
    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:theme="@style/NoteViewTheme">

        <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar_note"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:layout_constraintTop_toTopOf="parent"
                app:contentInsetStartWithNavigation="50dp"
                app:contentInsetEnd="50dp"
                app:navigationIcon="?attr/homeAsUpIndicator"/>


        <androidx.recyclerview.widget.RecyclerView
                style="@style/NoteElements"
                android:theme="@style/NoteElementsTheme"
                android:id="@+id/recyclerview_noteelements"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                app:layout_constraintTop_toBottomOf="@id/toolbar_note"
                app:layout_constraintBottom_toBottomOf="parent"
                app:items="@{viewModel.noteLiveData}"
                />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>